--- a/styles/Video.module.scss
+++ b/styles/Video.module.scss
@@ -1,7 +1,7 @@
 @import "theme";
 
 .section {
-    padding: 50px 20px;
+    padding: 20px;
     width: 100%;
     display: flex;
     flex: 1;
@@ -14,7 +14,7 @@
 .video {
     width: 700px;
     height: 390px;
-    margin-bottom: 30px;
+    margin: 20px auto;
 }
 
 .titulo {
