--- a/styles/BtnQueroEntrar.module.scss
+++ b/styles/BtnQueroEntrar.module.scss
@@ -3,7 +3,7 @@
 .btnWrapper {
     width: 100%;
     padding: 0 auto;
-    margin: 10px auto 5px auto;
+    margin: 5px auto;
     text-align: center;
     z-index: 3;
 }
