--- a/styles/Cronometro.module.scss
+++ b/styles/Cronometro.module.scss
@@ -30,10 +30,15 @@
 }
 
 .cronNumero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     font-family: 'arial_black';
     font-size: 40px;
     margin: 0 auto;
     width: 70px;
+    height: 50px;
     letter-spacing: 0px;
     color: rgb(255, 217, 0);
 }
