--- a/styles/FAQ.module.scss
+++ b/styles/FAQ.module.scss
@@ -9,6 +9,9 @@
     justify-content: space-between;
     align-items: center;
     background-color: $alice-blue;
+    background-image: url('/planetasEstrelas.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .titulo {
