--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -50,7 +50,7 @@
     position: absolute;
     // left: 876px;
     left:0px;
-    top: 45px;
+    top: 43px;
 }
 
 .textoImersao{
@@ -72,7 +72,7 @@
 }
 
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 1000px) {
 
 
     .section{
@@ -92,7 +92,7 @@
 
     .ImagemWrapper {
 
-        top: 140px;
+        top: 150px;
         left: auto;
         z-index: 1;
         
@@ -116,6 +116,7 @@
     .cronometroWrapper > div {
         margin: 0 auto;
         width: 92vw;
+        max-width: 400px;
     }
 
     .logo {
@@ -123,8 +124,8 @@
         position: absolute;
         top: 10px;
         left: auto;
-        margin: 0 auto;
-        width: 342px;
+        margin: 0 0 0 20px;
+        width: 360px;
     }
 
     .textoImersao{
