--- a/styles/cronograma.module.scss
+++ b/styles/cronograma.module.scss
@@ -48,6 +48,8 @@
     padding: 15px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .textWrapper {
