--- a/styles/sobreEliezer.module.scss
+++ b/styles/sobreEliezer.module.scss
@@ -17,7 +17,6 @@
 
 .sobre { 
  width: 50%;
- max-width: 550px;
  margin: 20px;
  padding: 10px 20px 10px 0px;
  display: flex;
@@ -83,10 +82,13 @@
     .imageWrapper {
         width: 90vw;
         min-width: 90vw;
+        text-align: center;
     }
     
     .imageWrapper > img {
         width: 90vw;
+        max-width: 400px;
+        margin: 15px 0 0 0 ;
         
     }
     .titulo {
