--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -124,7 +124,7 @@
         position: absolute;
         top: 10px;
         left: auto;
-        margin: 0 0 0 20px;
+        margin: 0 auto;
         width: 360px;
     }
 
