--- a/styles/cronograma.module.scss
+++ b/styles/cronograma.module.scss
@@ -100,6 +100,9 @@
     .dias :nth-child(5) { order: 3; }
     .dias :nth-child(6) { order: 7; }
     .dias :nth-child(7) { order: 4; }
+
+    .dia :nth-child(1) {order:1}
+    .dia :nth-child(2) {order:2}
 }
 
 @media screen and (max-width: 800px) {
