--- a/styles/Cronometro.module.scss
+++ b/styles/Cronometro.module.scss
@@ -36,6 +36,7 @@
     align-content: center;
     font-family: 'arial_black';
     font-size: 40px;
+    line-height: 45px;
     margin: 0 auto;
     width: 62px;
     height: 45px;
