--- a/styles/BtnQueroEntrar.module.scss
+++ b/styles/BtnQueroEntrar.module.scss
@@ -5,7 +5,7 @@
     padding: 0 auto;
     margin: 5px auto;
     text-align: center;
-    z-index: 3;
+    // z-index: 1;
 }
 
 .button {
@@ -21,7 +21,7 @@
     border-radius: 50px;
     border-width: 0px;
     cursor: pointer;
-    z-index: 4;
+    // z-index: 1;
 
 }
 
