--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,19 +9,19 @@ html {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 body {
   color: $darker-blue;
   margin: 0;
   padding: 0;
-  perspective: 1px;
-  transform-style: preserve-3d;
+  // perspective: 1px;
+  // transform-style: preserve-3d;
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  // overflow-y: scroll;
+  // overflow-x: hidden;
   font-family: 'arial_black','Arial Black', Helvetica, sans-serif;
 }
 
