--- a/styles/modal.module.scss
+++ b/styles/modal.module.scss
@@ -2,17 +2,19 @@
 
 .closeBtn{
     position: absolute;
-    top: -10px;
-    right: -10px;
+    top: -4px;
+    right: -4px;
     cursor: pointer;
     background-color:$base-green;
     color: aliceblue;
-    font-size: 20px;
+    font-size: 22px;
     padding: 5px;
-    height: 30px;
-    width: 30px;
+    height: 35px;
+    width: 35px;
     text-align: center;
     border-radius: 15px;
+    z-index: 10000;
+
 }
 
 .modal {
