--- a/styles/FAQ.module.scss
+++ b/styles/FAQ.module.scss
@@ -53,6 +53,8 @@
     align-items: center;
     justify-content: flex-start;
     border-radius: 20px;
+    box-shadow: 1px 1px 10px #888888 ;
+    
 }
 
 .perguntaImagem {
