--- a/styles/inscrito.module.scss
+++ b/styles/inscrito.module.scss
@@ -67,6 +67,16 @@
     font-size: 16px;
     line-height: 21px;
     margin: 0px auto    ;
+    color: rgb(211, 212, 99);
+}
+.subGrupo {
+    padding: 12px;
+  
+    font-family: 'arial';
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 21px;
+    margin: 0px auto    ;
     color: rgb(124, 124, 124);
 }
 
