--- a/styles/FAQ.module.scss
+++ b/styles/FAQ.module.scss
@@ -44,7 +44,7 @@
 
 .pergunta {
     background-color: $base-green;
-    width: 300px;
+    max-width: 300px;
     height: 340px;
     padding: 35px;
     margin: 10px;
