--- a/styles/inscrito.module.scss
+++ b/styles/inscrito.module.scss
@@ -4,7 +4,7 @@
 .section {
     min-height: 100vh;
     width: 100vw;
-    background: url('/universo.png');
+    background: url('/universo.jpg');
     background-size:cover;
     background-repeat: no-repeat;
     padding: 0;
