--- a/styles/FaixaResumo.module.scss
+++ b/styles/FaixaResumo.module.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items:flex-start;
+    align-items:center;
     flex-wrap: wrap;
     padding: 20px 20px;
     overflow: hidden;
@@ -18,7 +18,7 @@
     display: flex;
     flex:1;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 10px 20px;
     font-size: 15px;
@@ -30,7 +30,7 @@
 
 .card > img {
     align-self: center;
-    max-width: 150px;
+    max-width: 170px;
 
 }
 
@@ -45,7 +45,7 @@
 .text{
     text-align: center;
     max-width: 80%;
-    margin-top: 15px;
+    margin: 15px;
 
 }
 
