--- a/styles/MainBanner.module.scss
+++ b/styles/MainBanner.module.scss
@@ -14,7 +14,7 @@
     // margin-top: 10px;
     // transform-style: inherit;
 
-    background: url('/background.webp');
+    background: url('/background.jpg');
     background-size:cover;
     background-repeat: no-repeat;
     background-position: 18% 90%;
