--- a/styles/Cronometro.module.scss
+++ b/styles/Cronometro.module.scss
@@ -174,6 +174,17 @@
     font-size: 24px;
     line-height: 25px;
     color: rgb(124,124,124);
+    // margin: 0 auto 40px auto;
+}
+
+.brasilia{
+    padding: 0;
+    // text-transform: uppercase;  
+    font-family: 'arial';
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 14px;
+    color: rgb(80, 80, 80);
     margin: 0 auto 40px auto;
 }
 
