--- a/styles/BtnQueroEntrar.module.scss
+++ b/styles/BtnQueroEntrar.module.scss
@@ -23,7 +23,8 @@
     border-width: 0px;
     cursor: pointer;
     box-shadow: 2px 2px 6px #888888 ;
-    // z-index: 1;
+    z-index: 1;
+    text-align: center;
 
 }
 
